# metropolis

./: .gitignore  PERSISTENT_SESSION_IMPLEMENTATION.md  README.md  USAGE_TRACKING.md  main.py  package-lock.json  pyproject.toml  run_backend.py  start_backend.sh  test_conversation_hooks.py  test_hook.py
artifacts/: alphasense_overview.pptx
artifacts/68f416dbc6623c0d966436ad/: los_angeles_weather_map.html
artifacts/68f41a2c1438a77a36504b4b/: AMZN_vs_GOOGL_comparison.html
artifacts/68f41b251438a77a36504b4d/: AAPL_vs_MSFT_comparison.html
deck/: __init__.py  models.py  validate_deck.py
deck/data/: DR.txt  deutsche_bank_deck.json  dr-industry_primer.txt
documentations/: EMOJI_SUPPORT.md  HOOK_INTEGRATION.md  IMPLEMENTATION_SUMMARY.md  QUICK_START.md  WEBSOCKET_SETUP.md  pptx_template_replacement.md  web_search_pdf_generation.md
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  routeTree.gen.ts
frontend/src/api/: agentService.ts  baseApiclient.ts  fileService.ts  skillService.ts  workflowService.ts  workspaceService.ts
frontend/src/components/: ChatInput.tsx  ChatMessage.tsx  ChatPanel.tsx  ExecutionEventCard.tsx  FeatureFlagPanel.tsx  FeatureFlagToggle.tsx  FileListItem.tsx  FileListPanel.tsx  FileUploadButton.tsx  ProfileMenu.tsx  SessionSidebar.css  SessionSidebar.tsx  SkillCard.tsx  SkillEditorModal.tsx  SkillViewModal.tsx  SkillsPage.tsx  StreamingMessagePanel.tsx  ThemeToggle.tsx  TodoTable.tsx  WorkflowExecutionPanel.tsx  WorkflowList.tsx  WorkflowPage.tsx  WorkflowRunHistory.tsx  WorkspaceCard.tsx  WorkspaceList.tsx  WorkspacePage.tsx  WorkspaceThreadPanel.tsx  index.ts
frontend/src/contexts/: AgentChatContext.tsx  FeatureFlagContext.tsx  ThemeContext.tsx  WorkspaceThreadContext.tsx
frontend/src/hooks/: useAgentChat.ts  useFileList.ts  useSkills.ts  useWorkflows.ts  useWorkspace.ts
frontend/src/routes/: __root.tsx  about.tsx  chat.tsx  index.tsx  skills.tsx  workflow.tsx  workspace.$workspaceId.$threadId.tsx  workspace.$workspaceId.index.tsx  (+1 more)
src/metropolis/: __init__.py  app.py
src/ulam/: __init__.py  app.py
templates/: report_1305556__1759420857522.pptx
tests/: test_existing_session.py  test_hook.py  test_prompt.py  test_restore_cycle.py  test_resume_session.py
(+68 files in other folders)
